# contextAwarePlaylistRecommender

./: .gitignore  README.md
api/: .gitignore  main.py  pyproject.toml
api/context/: config.py
api/controller/: routes.py
api/controller/v1/endpoints/: recommender.py
api/schemas/: playlist_response.py
api/services/: context_llm_service.py  context_rules_service.py  lastfm_client.py  playlist_generator_service.py  recommender_service.py  spotify_client.py
api/services/ml_model/: generate_spotify_dataset.py
api/tests/: test_context_rules_service.py  test_lastfm_client.py  test_playlist_generator_service.py  test_recommender_service.py  test_spotify_client.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/components/: CsvUpload.tsx  DataTable.tsx  ErrorCard.tsx  PlaylistForm.tsx  RecommendationCard.tsx
frontend/src/types/: error.ts  playlist.ts  table.ts  upload.ts
