[project]
name = "playlist-api"
version = "1.0.0"
description = "API that recommends a playlist based on what you are currently doing."
authors = [
    {name = "Andrew Boateng",email = "andrew.21@outlook.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openai (>=1.101.0,<2.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
